--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Legit - Your gateway to Web3
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
