--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>
+ 
+$$\                           $$\   $$\     
+$$ |                          \__|  $$ |    
+$$ |       $$$$$$\   $$$$$$\  $$\ $$$$$$\   
+$$ |      $$  __$$\ $$  __$$\ $$ |\_$$  _|  
+$$ |      $$$$$$$$ |$$ /  $$ |$$ |  $$ |    
+$$ |      $$   ____|$$ |  $$ |$$ |  $$ |$$\ 
+$$$$$$$$\ \$$$$$$$\ \$$$$$$$ |$$ |  \$$$$  |
+\________| \_______| \____$$ |\__|   \____/ 
+                    $$\   $$ |              
+                    \$$$$$$  |              
+                     \______/               
+ 
+</h1>
+<p>Your gateway to web3</p>
 </body>
 </html>
