--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1>
- 
+<pre>
+
 $$\                           $$\   $$\     
 $$ |                          \__|  $$ |    
 $$ |       $$$$$$\   $$$$$$\  $$\ $$$$$$\   
@@ -14,7 +15,8 @@ $$$$$$$$\ \$$$$$$$\ \$$$$$$$ |$$ |  \$$$$  |
                     $$\   $$ |              
                     \$$$$$$  |              
                      \______/               
- 
+
+</pre>
 </h1>
 <p>Your gateway to web3</p>
 </body>
