Updating index content

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body style="text-align: centre;">
-<h1>
-<pre>
+
+<body style="text-align: center; font-family: 'Courier New', Courier, monospace; background-color: #000; color:#FFF;">
+    <pre style="font-size:20px;">
 
 $$\                           $$\   $$\     
 $$ |                          \__|  $$ |    
@@ -17,7 +17,9 @@ $$$$$$$$\ \$$$$$$$\ \$$$$$$$ |$$ |  \$$$$  |
                      \______/               
 
 </pre>
-</h1>
-<p>Your gateway to web3</p>
+
+    <p>Your gateway to web3</p>
+    <p><img src="dropping-soon.gif" /></p>
 </body>
+
 </html>
